After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 62006 - incorrect handling of double separators in text import
incorrect handling of double separators in text import
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: import/export Text
0.x
Other Linux
: Normal normal
: ---
Assigned To: Almer S. Tigelaar
Almer S. Tigelaar
Depends on:
Blocks:
 
 
Reported: 2001-10-09 18:18 UTC by Alexander Kirillov
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Alexander Kirillov 2001-10-09 18:18:13 UTC
When importing text file, the dialog has an option "See two separators as
one". This option is buggy: if it is checked, and the entries are separated
by exactly two spaces (assuming your separator is a space), it actually
merges them - as if they were not separated at all. If there are more than
2 spaces, everything is OK.
Comment 1 Almer S. Tigelaar 2001-10-13 12:39:19 UTC
An unfortunate bug caused this feature to only work on an uneven
number of separators. This has been fixed in CVS.